200129-2301 - added a fix for a jump at the animation end

--- a/duku-200112/starter/css/style.css
+++ b/duku-200112/starter/css/style.css
@@ -53,6 +53,7 @@ body {
     transform: translate(-50%, -50%);
 }
 .heading-primary {
+    backface-visibility: hidden;
     color: #fff;
     text-transform: uppercase;
 }
